compiler/toc-hir-lowering/tests/snapshots/lowering__lower_case_stmt-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "case s of label: end case"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..25): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..25): []
        Case@(FileId(1), 0..25)
          Name@(FileId(1), 5..6): "s"@(FileId(1), 5..6), undeclared
error at (FileId(1), 5..6): `s` is undeclared
| error for (FileId(1), 5..6): no definitions of `s` are in scope
error at (FileId(1), 10..17): cannot have a default `label` arm as the first `case` arm
| error for (FileId(1), 10..17): First `label` arm must have at least one selector expression

