compiler/toc-hir-lowering/tests/snapshots/lowering__lower_case_stmt-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "case s of label 1: end case"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..27): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..27): []
        Case@(FileId(1), 0..27)
          Name@(FileId(1), 5..6): "s"@(FileId(1), 5..6), undeclared
          Literal@(FileId(1), 16..17): Integer(1)
error in file FileId(1) at 5..6: `s` is undeclared
| error in file FileId(1) for 5..6: no definitions of `s` are in scope

