compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_literal-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "const a := '"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..12): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..12): []
        StmtItem@(FileId(1), 0..12): ItemId(0)
          ConstVar@(FileId(1), 0..12): const "a"@(FileId(1), 6..7)
            ExprBody@(FileId(1), 11..12)
error in file FileId(1) at 11..12: invalid char literal
| error in file FileId(1) for 11..12: missing terminator character

