compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_literal.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "const a := 'abcd💖'"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..21): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..21): []
        StmtItem@(FileId(1), 0..21): ItemId(0)
          ConstVar@(FileId(1), 0..21): const "a"@(FileId(1), 6..7)
            ExprBody@(FileId(1), 11..21)
              Literal@(FileId(1), 11..21): CharSeq("abcd💖")

